user name and password added

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 ###MYSQL Database
 MYSQL_DB= edutech
-MYSQL_USERNAME= root
-MYSQL_PASSWORD= 
+MYSQL_USERNAME= edutech
+MYSQL_PASSWORD= Edutech@123
 MYSQL_HOSTNAME= localhost
 MYSQL_PORT= 3306
 PORT = 8090
