--- a/.env
+++ b/.env
@@ -1,10 +1,16 @@
 ###MYSQL Database
 MYSQL_DB= edutech
-MYSQL_USERNAME= edutech
-MYSQL_PASSWORD= Edutech@123
+MYSQL_USERNAME= root
+MYSQL_PASSWORD= 
 MYSQL_HOSTNAME= localhost
 MYSQL_PORT= 3306
-PORT = 8091
+PORT = 8090
 NODE_ENV = development
 JWT_SECRET= edutechbackend
 COMMUNICATION_APP_LOCAL = http://localhost:8088/
+
+
+###AWS S3 BUCKET CREDENTIALS
+AWS_ID = AKIA3JPQLEVDWTYXLXEA
+AWS_SECRET = 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
+AWS_BUCKET_NAME = edutech-mlm
