--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Mayur",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.903.0",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
@@ -18,7 +19,9 @@
     "express-validator": "^6.10.1",
     "jsonwebtoken": "^8.5.1",
     "log4js": "^6.3.0",
+    "multer": "^1.4.2",
     "mysql": "^2.18.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "uuid": "^8.3.2"
   }
 }
