--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
 ###MYSQL Database
 MYSQL_DB= edutech
-MYSQL_USERNAME= root
-MYSQL_PASSWORD= 
+MYSQL_USERNAME= edutech
+MYSQL_PASSWORD= Edutech@123
 MYSQL_HOSTNAME= localhost
 MYSQL_PORT= 3306
-PORT = 8090
+PORT = 8091
 NODE_ENV = development
 JWT_SECRET= edutechbackend
 COMMUNICATION_APP_LOCAL = http://localhost:8088/
