--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "log4js": "^6.3.0",
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
+    "nodemon": "^2.0.7",
     "path": "^0.12.7",
     "uuid": "^8.3.2"
   }
