--- a/.env
+++ b/.env
@@ -14,3 +14,11 @@ COMMUNICATION_APP_LOCAL = http://localhost:8088/
 AWS_ID = AKIA3JPQLEVDWTYXLXEA
 AWS_SECRET = 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
 AWS_BUCKET_NAME = edutech-mlm
+
+
+###EASEBUZZ CREDENTIALS
+MERCHANT_KEY = VUQXAWELXZ
+EASEBUZZ_SALT = 7ESY3PUI2B
+TEST_PAY_URL = https://testpay.easebuzz.in
+FURL = http://localhost:8091/paymentResponse
+SURL = http://localhost:8091/paymentResponse
