--- a/package.json
+++ b/package.json
@@ -11,18 +11,22 @@
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "^2.903.0",
+    "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.10.1",
+    "js-sha512": "^0.8.0",
     "jsonwebtoken": "^8.5.1",
     "log4js": "^6.3.0",
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.7",
     "path": "^0.12.7",
+    "request": "^2.88.2",
     "uuid": "^8.3.2"
   }
 }
