email forget password otp updated

--- a/.env
+++ b/.env
@@ -22,3 +22,15 @@ EASEBUZZ_SALT = 7ESY3PUI2B
 TEST_PAY_URL = https://testpay.easebuzz.in
 FURL = http://localhost:8091/paymentResponse
 SURL = http://localhost:8091/paymentResponse
+
+###THIRD PARTY CREDENTIALS
+CLIENT_ID = RfZIJmMPV1xpiOYL
+CLIENT_NAME = EduTek
+
+###GMAIL SERVER
+GMAIL_SERVICE_NAME = gmail
+GMAIL_SERVICE_HOST = smtp.gmail.com
+GMAIL_SERVICE_SECURE = false
+GMAIL_SERVICE_PORT = 587
+GMAIL_USER_NAME = leestays03@gmail.com
+GMAIL_USER_PASSWORD = vo125600
