--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "log4js": "^6.3.0",
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.6.2",
+    "nodemailer-express-handlebars": "^4.0.0",
     "nodemon": "^2.0.7",
     "path": "^0.12.7",
     "request": "^2.88.2",
