--- a/.env
+++ b/.env
@@ -19,6 +19,8 @@ AWS_BUCKET_NAME = edutech-mlm
 ###EASEBUZZ CREDENTIALS
 MERCHANT_KEY = VUQXAWELXZ
 EASEBUZZ_SALT = 7ESY3PUI2B
+WIRE_KEY = 6A2D34C136
+WIRE_SALT = DAFE83848F
 TEST_PAY_URL = https://testpay.easebuzz.in
 FURL = http://localhost:8091/paymentResponse
 SURL = http://localhost:8091/paymentResponse
